@@ -13,7 +13,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclZlib.c,v 1.13 2008/12/17 14:33:33 dkf Exp $
+ * RCS: @(#) $Id: tclZlib.c,v 1.14 2008/12/17 16:47:38 nijtmans Exp $
  */
 
 #include "tclInt.h"
@@ -718,7 +718,7 @@ ZlibStreamCleanup(
 	Tcl_DecrRefCount(zsh->currentInput);
     }
 
-    ckfree((void *) zsh);
+    ckfree((char *) zsh);
 }
 
 /*
