@@ -1,3 +1,10 @@
+2008-12-17  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclResult.c:     move variable "length" inside if()
+	* generic/tclStringObj.c:  don't use ckfree((void *)...) but
+	* generic/tclVar.c:        ckfree((char *)...)
+	* generic/tclZlib.c
+
 2008-12-17  Donal K. Fellows  <dkf@users.sf.net>
 
 	* tests/namespace.test (namespace-28.1):	Make tests not
